--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,9 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
+modo-compose = "0.10.0"
+protobufJavalite = "3.21.11"
+protobufKotlinLite = "3.21.11"
 composeBom = "2025.09.01"
 glide-compose = "1.0.0-beta08"
 glide = "5.0.5"
@@ -22,6 +25,7 @@ retrofit = "3.0.0"
 chucker = "4.2.0"
 room = "2.8.2"
 datastorepreferences = "1.1.7"
+material3 = "1.4.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -59,6 +63,10 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+modo-compose = { module = "com.github.terrakok:modo-compose", version.ref = "modo-compose" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJavalite" }
+protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufKotlinLite" }
 
 
 [plugins]
